--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <title>BPN 2015</title>
+    <title>WP3WT</title>
      <!-- Application specific to load before ExtJS -->
     <script type="text/javascript" src="heron/ux/timeslider/js/prototype.js"></script>
     <script type="text/javascript" src="heron/ux/timeslider/js/scriptaculous.js?load=effects,dragdrop"></script>
@@ -56,7 +56,7 @@
 
 	<link rel="stylesheet" type="text/css" href="heron/resources/css/default.css"/>
   <link rel="stylesheet" href="heron/ux/timeslider/css/dateslider.css" type = "text/css" />
-  
+
 	<!-- application -->
 	<script type="text/javascript" src="heron/script/Heron.js"></script>
   <script type="text/javascript" src="heron/lib/App.js"></script>
